--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimaryDark">#4E342E</color>
-    <color name="colorPrimary">#6D4C41</color>
-    <color name="colorAccent">#FF8F00</color>
-    <color name="listBckgrnd1">#33FFD54F</color>
-    <color name="listBckgrnd2">#80A1887F</color>
+    <color name="colorPrimaryDark">#990000</color>
+    <color name="colorPrimary">#e60000</color>
+    <color name="colorAccent"> #ff0000</color>
+    <color name="listBckgrnd1">#ff8080</color>
+    <color name="listBckgrnd2">#ffcccc</color>
     <color name="darkText">#212121</color>
     <color name="lightText">#FFFFFF</color>
-    <color name="backgroundLight">#D7CCC8</color>
+    <color name="backgroundLight">#ff6666</color>
 </resources>
+
